Fix some layout issues on smaller screen sizes

--- a/css/main.css
+++ b/css/main.css
@@ -169,10 +169,20 @@ body {
     padding: 16px 32px;
 }
 
-.about-me {
-    padding: 32px;
-    margin: 0 auto;
-    width: 50%;
+@media (min-width: 660px) {
+    .about-me {
+	padding: 32px;
+	margin: 0 auto;
+	width: 50%;
+    }
+}
+
+@media (max-width: 659px) {
+    .about-me {
+	padding: 32px;
+	margin: 0 auto;
+	width: 100%;
+    }
 }
 
 h3 {
